Acrescentei novos detalhes e CSS das receitas

--- a/index.html
+++ b/index.html
@@ -77,7 +77,20 @@
                 </button>
 
             <div class="meal-details-content">
-                
+                <h2 class="recipe-title">
+                    Nome da Receita Aqui</h2>
+                <p class="recipe-category">Nome da Categoria</p>
+                <div class="recipe-instruction">
+                    <h3>Instruções:</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus maxime eligendi repudiandae obcaecati illum similique alias doloribus perspiciatis sunt omnis, sint itaque fugit saepe quis, accusamus molestiae. Nostrum, magni consequatur!</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corrupti quos tempora delectus architecto aspernatur voluptate consectetur sed aliquid, impedit dolore est blanditiis deserunt incidunt ea sint necessitatibus magni asperiores soluta.</p>
+                </div>
+                <div class="recipe-meal-img">
+                    <img src="food.jpeg" alt="">
+                </div>
+                <div class="recipe-link">
+                    <a href="#" target="_blank">Assista ao Vídeo</a>
+                </div>
             </div>
             </div>
         </div>
