--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encontre Receitas para seus Ingredientes</title>
+    <title>Find Recipes for Your Ingredients</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,20 +12,20 @@
         <div class="meal-wrapper">
             <div class="meal-search">
                 <h2 class="title">
-                    Encontre Receitas para seus Ingredientes
+                    Find Recipes for Your Ingredients
                 </h2>
-                <blockquote>Gastronomia é a arte de usar comida para criar felicidade. <br>
-                <cite>- Theodore Zeldin</cite></blockquote>
+                <blockquote>Real food doesn't have ingredients, real food is ingredients. <br>
+                <cite>- Jamie Oliver</cite></blockquote>
 
                 <div class="meal-search-box">
-                    <input type="text" class="search-control" placeholder="Escreva um ingrediente" id="search-input">
+                    <input type="text" class="search-control" placeholder="Write an ingredient" id="search-input">
                     <button type="submit" class="search-btn btn" id="search-btn">
                         <i class="fas fa-search"></i>
                     </button>
                 </div>
             </div>
             <div class="meal-result">
-                <h2 class="title">Seus resultados de busca:</h2>
+                <h2 class="title">Your Search Results:</h2>
                 <div id="meal">
                     
 
